@@ -3,22 +3,27 @@ package com.sellion.sellionserver.controller;
 import com.sellion.sellionserver.entity.*;
 import com.sellion.sellionserver.repository.*;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Controller;
+import org.springframework.transaction.annotation.Transactional;
 import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.*;
 
 import java.math.BigDecimal;
+import java.math.RoundingMode;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.time.LocalTime;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
 import java.util.stream.Collectors;
 
 @Controller
 @RequestMapping("/admin")
 @RequiredArgsConstructor
+@Slf4j
 public class PrintController {
 
     private final OrderRepository orderRepository;
@@ -36,6 +41,7 @@ public class PrintController {
     }
 
     @GetMapping("/orders/print/{id}")
+    @Transactional(readOnly = true)
     public String printOrder(@PathVariable Long id, Model model) {
         Order order = orderRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("Заказ не найден: " + id));
@@ -46,7 +52,9 @@ public class PrintController {
         return "print_template";
     }
 
+
     @GetMapping("/returns/print/{id}")
+    @Transactional(readOnly = true)
     public String printReturn(@PathVariable Long id, Model model) {
         ReturnOrder ret = returnOrderRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("Возврат не найден: " + id));
@@ -58,13 +66,13 @@ public class PrintController {
     }
 
     @GetMapping("/orders/print-all")
+    @Transactional(readOnly = true)
     public String printAllOrders(
             @RequestParam(value = "orderManagerId", required = false) String orderManagerId,
             @RequestParam(value = "orderStartDate", required = false) String start,
             @RequestParam(value = "orderEndDate", required = false) String end,
             Model model) {
 
-        // ИСПРАВЛЕНО: Безопасный парсинг в LocalDateTime
         LocalDate startD = (start == null || start.isEmpty()) ? LocalDate.now() : LocalDate.parse(start);
         LocalDate endD = (end == null || end.isEmpty()) ? startD : LocalDate.parse(end);
 
@@ -80,7 +88,7 @@ public class PrintController {
                 .reduce(BigDecimal.ZERO, BigDecimal::add);
 
         model.addAttribute("operations", filtered);
-        model.addAttribute("finalTotal", total);
+        model.addAttribute("finalTotal", total.setScale(2, RoundingMode.HALF_UP));
         model.addAttribute("title", "РЕЕСТР ЗАКАЗОВ");
         model.addAttribute("currentDateTime", LocalDateTime.now());
 
@@ -88,13 +96,13 @@ public class PrintController {
     }
 
     @GetMapping("/returns/print-all")
+    @Transactional(readOnly = true)
     public String printAllReturns(
             @RequestParam(value = "returnManagerId", required = false) String returnManagerId,
             @RequestParam(value = "returnStartDate", required = false) String start,
             @RequestParam(value = "returnEndDate", required = false) String end,
             Model model) {
 
-        // ИСПРАВЛЕНО: Безопасный парсинг в LocalDateTime
         LocalDate startD = (start == null || start.isEmpty()) ? LocalDate.now() : LocalDate.parse(start);
         LocalDate endD = (end == null || end.isEmpty()) ? startD : LocalDate.parse(end);
 
@@ -110,35 +118,16 @@ public class PrintController {
                 .reduce(BigDecimal.ZERO, BigDecimal::add);
 
         model.addAttribute("operations", filtered);
-        model.addAttribute("finalTotal", total);
+        model.addAttribute("finalTotal", total.setScale(2, RoundingMode.HALF_UP));
         model.addAttribute("title", "РЕЕСТР ВОЗВРАТОВ");
         model.addAttribute("currentDateTime", LocalDateTime.now());
 
         return "print_list_template";
     }
 
-    private List<PrintItemDto> preparePrintItems(Map<Long, Integer> items) {
-        List<PrintItemDto> dtoList = new ArrayList<>();
-        if (items == null) return dtoList;
-
-        for (Map.Entry<Long, Integer> entry : items.entrySet()) {
-            Product product = productRepository.findById(entry.getKey()).orElse(null);
-            PrintItemDto dto = new PrintItemDto();
-            if (product != null) {
-                dto.name = product.getName();
-                dto.price = product.getPrice();
-            } else {
-                dto.name = "Товар (ID: " + entry.getKey() + ") удален";
-                dto.price = BigDecimal.ZERO;
-            }
-            dto.quantity = entry.getValue();
-            dto.total = (dto.price != null) ? dto.price.multiply(BigDecimal.valueOf(dto.quantity)) : BigDecimal.ZERO;
-            dtoList.add(dto);
-        }
-        return dtoList;
-    }
 
     @GetMapping("/logistic/route-list")
+    @Transactional(readOnly = true)
     public String printRouteList(@RequestParam String managerId, @RequestParam String date, Model model) {
         LocalDate deliveryDate = LocalDate.parse(date);
         List<Order> orders = orderRepository.findDailyRouteOrders(managerId, deliveryDate);
@@ -149,13 +138,15 @@ public class PrintController {
         model.addAttribute("orders", orders);
         model.addAttribute("managerId", managerId);
         model.addAttribute("date", date);
-        model.addAttribute("routeTotal", routeTotal);
+        model.addAttribute("routeTotal", routeTotal.setScale(2, RoundingMode.HALF_UP));
         model.addAttribute("title", "МАРШРУТНЫЙ ЛИСТ: " + managerId);
         model.addAttribute("clientRepo", clientRepository);
         return "print_route_template";
     }
 
+
     @GetMapping("/clients/print-statement/{id}")
+    @Transactional(readOnly = true)
     public String printClientStatement(@PathVariable Long id, @RequestParam String start, @RequestParam String end, Model model) {
         Client client = clientRepository.findById(id).orElseThrow();
         LocalDate startDate = LocalDate.parse(start);
@@ -166,7 +157,7 @@ public class PrintController {
                 .filter(tx -> tx.getTimestamp() != null &&
                         !tx.getTimestamp().toLocalDate().isBefore(startDate) &&
                         !tx.getTimestamp().toLocalDate().isAfter(endDate))
-                .collect(Collectors.toList());
+                .toList();
 
         model.addAttribute("client", client);
         model.addAttribute("transactions", transactions);
@@ -176,7 +167,9 @@ public class PrintController {
         return "print_statement_template";
     }
 
+
     @PostMapping("/orders/print-batch")
+    @Transactional(readOnly = true)
     public String printOrdersBatch(@RequestParam("ids") List<Long> ids, Model model) {
         List<Order> orders = orderRepository.findAllById(ids);
         BigDecimal total = orders.stream()
@@ -184,13 +177,14 @@ public class PrintController {
                 .reduce(BigDecimal.ZERO, BigDecimal::add);
 
         model.addAttribute("operations", orders);
-        model.addAttribute("finalTotal", total);
-        model.addAttribute("title", "РЕЕСТР ЗАКАЗОВ");
-        model.addAttribute("currentDateTime", LocalDateTime.now()); // Для центральной даты
+        model.addAttribute("finalTotal", total.setScale(2, RoundingMode.HALF_UP));
+        model.addAttribute("title", "РЕЕСТР ВЫБРАННЫХ ЗАКАЗОВ");
+        model.addAttribute("currentDateTime", LocalDateTime.now());
         return "print_list_template";
     }
 
     @PostMapping("/returns/print-batch")
+    @Transactional(readOnly = true)
     public String printReturnsBatch(@RequestParam("ids") List<Long> ids, Model model) {
         List<ReturnOrder> returns = returnOrderRepository.findAllById(ids);
         BigDecimal total = returns.stream()
@@ -198,22 +192,26 @@ public class PrintController {
                 .reduce(BigDecimal.ZERO, BigDecimal::add);
 
         model.addAttribute("operations", returns);
-        model.addAttribute("finalTotal", total);
-        model.addAttribute("title", "РЕЕСТР ВОЗВРАТОВ");
+        model.addAttribute("finalTotal", total.setScale(2, RoundingMode.HALF_UP));
+        model.addAttribute("title", "РЕЕСТР ВЫБРАННЫХ ВОЗВРАТОВ");
         model.addAttribute("currentDateTime", LocalDateTime.now());
         return "print_list_template";
     }
+
+
     @GetMapping("/logistic/print-compact")
+    @Transactional(readOnly = true)
     public String printCompact(@RequestParam String managerId, @RequestParam String date, @RequestParam String type, Model model) {
         LocalDate deliveryDate = LocalDate.parse(date);
-        List<PrintItemDto> allData = new ArrayList<>();
 
         if ("order".equals(type)) {
             List<Order> orders = orderRepository.findDailyRouteOrders(managerId, deliveryDate);
             model.addAttribute("payload", orders);
-            model.addAttribute("title", "РЕЕСТР НАКЛАДНЫХ (ДОСТАВКА)");
+            model.addAttribute("title", "РЕЕСТР НАԿԼԱԴՆЫХ (ДОСТАВКА)");
         } else {
-            // Логика для возвратов аналогично
+            List<ReturnOrder> returns = returnOrderRepository.findReturnsByManagerAndDateRange(managerId, deliveryDate.atStartOfDay(), deliveryDate.atTime(LocalTime.MAX));
+            model.addAttribute("payload", returns);
+            model.addAttribute("title", "РЕЕСТР ВОЗВРАТОВ (ДОСТАВКА)");
         }
 
         model.addAttribute("productRepo", productRepository);
@@ -222,26 +220,49 @@ public class PrintController {
 
 
     @GetMapping("/invoices/print-debts")
+    @Transactional(readOnly = true)
     public String printManagerDebts(@RequestParam String managerId, Model model) {
-        // Получаем все счета менеджера, которые не оплачены (статус не PAID)
         List<Invoice> unpaidInvoices = invoiceRepository.findAllByOrderByCreatedAtDesc().stream()
-                // Замените на безопасное сравнение:
-                .filter(inv -> managerId.equals(inv.getManagerId())) // Переменная слева защищает от null
-
+                .filter(inv -> managerId.equals(inv.getManagerId()))
                 .filter(inv -> !"PAID".equals(inv.getStatus()))
-                .collect(Collectors.toList());
+                .toList();
 
         BigDecimal totalDebt = unpaidInvoices.stream()
-                .map(inv -> inv.getTotalAmount().subtract(inv.getPaidAmount()))
+                .map(inv -> inv.getTotalAmount().subtract(Optional.ofNullable(inv.getPaidAmount()).orElse(BigDecimal.ZERO)))
                 .reduce(BigDecimal.ZERO, BigDecimal::add);
 
         model.addAttribute("invoices", unpaidInvoices);
         model.addAttribute("managerId", managerId);
-        model.addAttribute("totalDebt", totalDebt);
+        model.addAttribute("totalDebt", totalDebt.setScale(2, RoundingMode.HALF_UP));
         model.addAttribute("title", "ЛИСТ ЗАДОЛЖЕННОСТИ: " + managerId);
         model.addAttribute("currentDate", LocalDateTime.now());
 
-        return "print_debts_template"; // Вам нужно будет создать этот HTML файл в templates
+        return "print_debts_template";
     }
 
+
+    private List<PrintItemDto> preparePrintItems(Map<Long, Integer> items) {
+        if (items == null || items.isEmpty()) return new ArrayList<>();
+
+        List<Product> products = productRepository.findAllById(items.keySet());
+        Map<Long, Product> productMap = products.stream()
+                .collect(Collectors.toMap(Product::getId, java.util.function.Function.identity()));
+
+        List<PrintItemDto> dtoList = new ArrayList<>();
+        for (Map.Entry<Long, Integer> entry : items.entrySet()) {
+            Product p = productMap.get(entry.getKey());
+            PrintItemDto dto = new PrintItemDto();
+            if (p != null) {
+                dto.name = p.getName();
+                dto.price = p.getPrice();
+            } else {
+                dto.name = "Товар (ID: " + entry.getKey() + ") удален";
+                dto.price = BigDecimal.ZERO;
+            }
+            dto.quantity = entry.getValue();
+            dto.total = (dto.price != null) ? dto.price.multiply(BigDecimal.valueOf(dto.quantity)) : BigDecimal.ZERO;
+            dtoList.add(dto);
+        }
+        return dtoList;
+    }
 }
